🚸 import only used bulma styles

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,21 @@ $link: #304455;
 $dark: #35495e;
 $gap: 22px;
 
-@import "~bulma/bulma.sass";
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/base/_all.sass";
+@import "bulma/sass/layout/_all.sass";
+@import "bulma/sass/elements/container.sass";
+@import "bulma/sass/elements/other.sass";
+@import "bulma/sass/elements/tag.sass";
+@import "bulma/sass/elements/button.sass";
+@import "bulma/sass/elements/title.sass";
+@import "bulma/sass/grid/columns.sass";
+@import "bulma/sass/form/shared.sass";
+@import "bulma/sass/form/input-textarea.sass";
+@import "bulma/sass/form/tools.sass";
+@import "bulma/sass/components/menu.sass";
+@import "bulma/sass/components/message.sass";
+@import "bulma/sass/components/panel.sass";
 
 html, body {
   width: 100%;
