💄 add missing helpers

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/base/_all.sass";
 @import "bulma/sass/layout/_all.sass";
+@import "bulma/sass/helpers/_all.sass";
 @import "bulma/sass/elements/container.sass";
 @import "bulma/sass/elements/other.sass";
 @import "bulma/sass/elements/tag.sass";
